--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,28 @@
 /* Add custom styles to display the fruits */
+h1{
+    text-align: center;
+color: whitesmoke;
+font-family:'Times New Roman', Times, serif;
+}
+/* body{
+    font-family:'Times New Roman', Times, serif;
+} */
+img{
+    width: 70px;
+    height: 80px;
+    
+}
+.card{
+width: 12rem;
+}
+.card{
+    font-family:'Times New Roman', Times, serif;
+    align-items: center;
+}
+p{
+    font-family:'Times New Roman', Times, serif;
+}
+.thick{
+    font-size: x-large;
+    padding-left: 8px;
+}
